--- a/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
+++ b/TaskTracker/TaskTracker/Views/Controls/CarouselItem.xaml
@@ -13,15 +13,30 @@
     </ContentView.Resources>
 
     <ContentView.Content>
-        <Grid>
-            <popupLayout:SfPopupLayout x:Name="AddNewTaskPopup">
+        <popupLayout:SfPopupLayout x:Name="AddNewTaskPopup">
 
-                <popupLayout:SfPopupLayout.Content>
+            <popupLayout:SfPopupLayout.Content>
 
-                    <xForms:SfListView x:Name="LvTasks" ItemsSource="{Binding TaskCollection}" TapCommand="{Binding TaskSelectedCommand}" 
+                <Grid>
+
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="55" />
+                        <RowDefinition Height="*" />
+                    </Grid.RowDefinitions>
+
+                    <Grid x:Name="Header" BackgroundColor="Transparent">
+                        <StackLayout Orientation="Horizontal" >
+                            <Image x:Name="DeleteImage" IsVisible="False" Source="delete.xml"/>
+                            <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" 
+                                   FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
+                        </StackLayout>
+                    </Grid>
+
+                    <xForms:SfListView Grid.Row="1" x:Name="lvTasks" ItemsSource="{Binding TaskCollection}" TapCommand="{Binding TaskSelectedCommand}" 
                                        ItemDragging="LvTasks_OnItemDragging"
                                        ItemSize="80" DragStartMode="OnHold" ItemSpacing="0,0,0,5" 
-                                       IsStickyFooter="True" IsStickyHeader="True">
+                                       IsStickyFooter="True">
+
                         <xForms:SfListView.ItemTemplate>
                             <DataTemplate>
                                 <FlexLayout Padding="5,5,5,5" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Column" BackgroundColor="#FAFAFA">
@@ -34,16 +49,17 @@
                             </DataTemplate>
                         </xForms:SfListView.ItemTemplate>
 
-                        <xForms:SfListView.HeaderTemplate>
+                        <xForms:SfListView.DragItemTemplate>
                             <DataTemplate>
-                                <Frame x:Name="Header" Padding="1" BackgroundColor="Transparent">
-                                    <StackLayout Orientation="Horizontal" >
-                                        <Image IsVisible="False" x:Name="DeleteImage" Source="delete.xml"/>
-                                        <Label TextColor="Black" HorizontalTextAlignment="Center" Text="{Binding Name}" FontAttributes="Bold" FontSize="Medium" VerticalOptions="Center" HorizontalOptions="Center"/>
-                                    </StackLayout>
-                                </Frame>
+                                <FlexLayout Padding="5,5,5,5" AlignItems="Start" JustifyContent="SpaceBetween" Direction="Column" BackgroundColor="#4BFAFAFA">
+                                    <Label TextColor="Black" Text="{Binding Name}"/>
+                                    <BoxView HeightRequest="1" HorizontalOptions="CenterAndExpand" Color="#616161"/>
+                                    <Frame HeightRequest="30" WidthRequest="30" CornerRadius="15" Padding="1" BackgroundColor="LightBlue" Opacity=".5">
+                                        <Image Scale="0.7" Source="{Binding AssignedUser.Image}"/>
+                                    </Frame>
+                                </FlexLayout>
                             </DataTemplate>
-                        </xForms:SfListView.HeaderTemplate>
+                        </xForms:SfListView.DragItemTemplate>
 
                         <xForms:SfListView.FooterTemplate>
                             <DataTemplate>
@@ -52,21 +68,22 @@
                         </xForms:SfListView.FooterTemplate>
                     </xForms:SfListView>
 
-                </popupLayout:SfPopupLayout.Content>
+                </Grid>
 
-                <popupLayout:SfPopupLayout.PopupView>
-                    <popupLayout:PopupView AppearanceMode="TwoButton" AcceptButtonText="{resources:Translate Accept}" DeclineButtonText="{resources:Translate Cancel}" AcceptCommand="{Binding ConfirmPopupCommand}" HeaderTitle="{resources:Translate AddNewTask}" HeightRequest="150">
-                        <popupLayout:PopupView.ContentTemplate>
-                            <DataTemplate>
-                                <Grid>
-                                    <Entry Text="{Binding NewTaskName, Mode=TwoWay}" Placeholder="{resources:Translate TaskName}" Keyboard="Text" TextColor="Black" HeightRequest="50"/>
-                                </Grid>
-                            </DataTemplate>
-                        </popupLayout:PopupView.ContentTemplate>
-                    </popupLayout:PopupView>
-                </popupLayout:SfPopupLayout.PopupView>
+            </popupLayout:SfPopupLayout.Content>
 
-            </popupLayout:SfPopupLayout>
-        </Grid>
+            <popupLayout:SfPopupLayout.PopupView>
+                <popupLayout:PopupView AppearanceMode="TwoButton" AcceptButtonText="{resources:Translate Accept}" DeclineButtonText="{resources:Translate Cancel}" AcceptCommand="{Binding ConfirmPopupCommand}" HeaderTitle="{resources:Translate AddNewTask}" HeightRequest="150">
+                    <popupLayout:PopupView.ContentTemplate>
+                        <DataTemplate>
+                            <Grid>
+                                <Entry Text="{Binding NewTaskName, Mode=TwoWay}" Placeholder="{resources:Translate TaskName}" Keyboard="Text" TextColor="Black" HeightRequest="50"/>
+                            </Grid>
+                        </DataTemplate>
+                    </popupLayout:PopupView.ContentTemplate>
+                </popupLayout:PopupView>
+            </popupLayout:SfPopupLayout.PopupView>
+
+        </popupLayout:SfPopupLayout>
     </ContentView.Content>
 </ContentView>
