--- a/TaskTracker/TaskTracker/Views/BoardManagementPage.xaml
+++ b/TaskTracker/TaskTracker/Views/BoardManagementPage.xaml
@@ -1,12 +1,79 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://xamarin.com/schemas/2014/forms"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:resources="clr-namespace:TaskTracker.Resources;assembly=TaskTracker"
+             xmlns:converters="clr-namespace:TaskTracker.Converters;assembly=TaskTracker"
+             xmlns:popupLayout="clr-namespace:Syncfusion.XForms.PopupLayout;assembly=Syncfusion.SfPopupLayout.XForms"
+             xmlns:textInputLayout="clr-namespace:Syncfusion.XForms.TextInputLayout;assembly=Syncfusion.Core.XForms"
+             xmlns:xForms="clr-namespace:Syncfusion.ListView.XForms;assembly=Syncfusion.SfListView.XForms"
              x:Class="TaskTracker.Views.BoardManagementPage">
+
+    <ContentPage.Resources>
+        <converters:BoolNegateConverter x:Key="NegateConverter"/>
+    </ContentPage.Resources>
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Order="Primary" Text="{resources:Translate Accept}" Command="{Binding SaveBoardCommand}"/>
+        <ToolbarItem Order="Secondary" Text="{resources:Translate Delete}" Command="{Binding DeleteBoardButtonCommand}"/>
+        <ToolbarItem Order="Secondary" Text="{resources:Translate Refresh}" Command="{Binding RefreshCommand}"/>
+    </ContentPage.ToolbarItems>
+
     <ContentPage.Content>
-        <StackLayout>
-            <Label Text="Welcome to Xamarin.Forms!"
-                VerticalOptions="CenterAndExpand" 
-                HorizontalOptions="CenterAndExpand" />
-        </StackLayout>
+
+        <popupLayout:SfPopupLayout x:Name="BoardManagementPopup">
+            <popupLayout:SfPopupLayout.Content>
+
+                <Grid>
+                    <StackLayout Spacing="10" Padding="5,30" Opacity="{Binding ControlsOpacity}" 
+                                 IsEnabled="{Binding ShowWaitForm, Converter={StaticResource NegateConverter}}">
+                        <Frame>
+                            <textInputLayout:SfTextInputLayout BackgroundColor="Transparent" HeightRequest="50" 
+                                                               FocusedStrokeWidth="2" UnfocusedStrokeWidth="0">
+                                <Entry BackgroundColor="Transparent" Text="{Binding SelectedTask.Name}"/>
+                            </textInputLayout:SfTextInputLayout>
+                        </Frame>
+
+                        <Frame>
+                            <StackLayout Orientation="Vertical">
+                                <Label Text="{resources:Translate AssignedUsers}" FontSize="Medium"/>
+                                <xForms:SfListView ItemsSource="{Binding SelectedBoard.AssignedUsers}">
+                                    <xForms:SfListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <Grid>
+                                                <Grid.ColumnDefinitions>
+                                                    <ColumnDefinition/>
+                                                    <ColumnDefinition Width=".9*"/>
+                                                </Grid.ColumnDefinitions>
+
+                                                <FlexLayout Grid.Column="0" HorizontalOptions="Start" >
+                                                    <Frame HeightRequest="40" WidthRequest="40" CornerRadius="20" Padding="1" BackgroundColor="LightBlue">
+                                                        <Image Scale="0.7" Source="{Binding SelectedTask.AssignedUser.Image}"/>
+                                                    </Frame>
+                                                </FlexLayout>
+
+                                                <Label Grid.Column="1" Text="{Binding SelectedTask.AssignedUser.Login}" TextColor="Black" FontSize="Medium" 
+               HorizontalTextAlignment="Start" VerticalTextAlignment="Center" HorizontalOptions="StartAndExpand"/>
+
+                                                <Grid.GestureRecognizers>
+                                                    <TapGestureRecognizer Command="{Binding EditAssignedUserButtonCommand}"/>
+                                                </Grid.GestureRecognizers>
+
+                                            </Grid>
+                                        </DataTemplate>
+                                    </xForms:SfListView.ItemTemplate>
+                                </xForms:SfListView>
+
+                            </StackLayout>
+                        </Frame>
+
+                    </StackLayout>
+
+                    <ActivityIndicator IsRunning="{Binding ShowWaitForm}" HorizontalOptions="Center"/>
+
+                </Grid>
+
+            </popupLayout:SfPopupLayout.Content>
+        </popupLayout:SfPopupLayout>
+
     </ContentPage.Content>
 </ContentPage>
